Fix margins on mobile menu

--- a/css/menu-mobile.css
+++ b/css/menu-mobile.css
@@ -12,9 +12,8 @@
   .menu-mobile-box {
     display: inline-block;
     width: 100%;
-    height: 10%;
     background-color: white;
-    padding: 3% 3%;
+    padding: 3%;
     position: fixed;
     z-index: 8;
   }
@@ -26,7 +25,7 @@
     cursor: pointer;
     border: none;
     background-color: white;
-    margin: 4% 0;
+    margin: 2% 0
   }
 
   .bar1, .bar2, .bar3 {
@@ -52,9 +51,9 @@
   .my-name-bg-mobile {
     display: inline-block;
     width: 45%;
+    margin-top: 2.5%;
     padding: 2%;
     border: .07em solid black;
-    margin-top: 4%;
     position: relative;
     float: right;
   }
